fixed filter overlap

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -143,7 +143,6 @@ header {
     "head head"
     "neigh cusine";
   grid-column-gap: 2vmin;
-  padding: 1vmin;
 }
   #filter-header {
     grid-area: head;
